chore: upgrade to Java 21 (#307)
Closes: MODQM-458